apps/docs/api_versioned_docs/version-0.6.4/client/index.md
# Overview

## Classes

- [Attachment](classes/Attachment.md)
- [AttachmentBuilder](classes/AttachmentBuilder.md)
- [Base](classes/Base.md)
- [BaseChannel](classes/BaseChannel.md)
- [BitField](classes/BitField.md)
- [ChannelManager](classes/ChannelManager.md)
- [Client](classes/Client.md)
- [ClientUser](classes/ClientUser.md)
- [Collection](classes/Collection.md)
- [Collector](classes/Collector.md)
- [DMChannel](classes/DMChannel.md)
- [EmbedBuilder](classes/EmbedBuilder.md)
- [Emoji](classes/Emoji.md)
- [EmojiManager](classes/EmojiManager.md)
- [GatewayManager](classes/GatewayManager.md)
- [GroupChannel](classes/GroupChannel.md)
- [Member](classes/Member.md)
- [MemberManager](classes/MemberManager.md)
- [Message](classes/Message.md)
- [MessageCollector](classes/MessageCollector.md)
- [MessageManager](classes/MessageManager.md)
- [MessageReaction](classes/MessageReaction.md)
- [Permissions](classes/Permissions.md)
- [ReactionCollector](classes/ReactionCollector.md)
- [RESTManager](classes/RESTManager.md)
- [Role](classes/Role.md)
- [RoleManager](classes/RoleManager.md)
- [Server](classes/Server.md)
- [ServerChannelManager](classes/ServerChannelManager.md)
- [ServerManager](classes/ServerManager.md)
- [StoatAPIError](classes/StoatAPIError.md)
- [SweeperManager](classes/SweeperManager.md)
- [TextChannel](classes/TextChannel.md)
- [UnknownChannel](classes/UnknownChannel.md)
- [User](classes/User.md)
- [UserManager](classes/UserManager.md)

## Interfaces

- [BotInformation](interfaces/BotInformation.md)
- [ChannelCreateOptions](interfaces/ChannelCreateOptions.md)
- [ChannelEditOptions](interfaces/ChannelEditOptions.md)
- [ChannelRolePermissionOptions](interfaces/ChannelRolePermissionOptions.md)
- [ClientEvents](interfaces/ClientEvents.md)
- [ClientOptions](interfaces/ClientOptions.md)
- [CollectorOptions](interfaces/CollectorOptions.md)
- [FetchMembersOptions](interfaces/FetchMembersOptions.md)
- [Interaction](interfaces/Interaction.md)
- [Masquerade](interfaces/Masquerade.md)
- [MemberBanOptions](interfaces/MemberBanOptions.md)
- [MemberEditOptions](interfaces/MemberEditOptions.md)
- [MessageCollectorOptions](interfaces/MessageCollectorOptions.md)
- [MessageFetchOptions](interfaces/MessageFetchOptions.md)
- [MessageOptions](interfaces/MessageOptions.md)
- [ReactionCollectorOptions](interfaces/ReactionCollectorOptions.md)
- [ReplyIntent](interfaces/ReplyIntent.md)
- [RoleCreateOptions](interfaces/RoleCreateOptions.md)
- [RoleEditOptions](interfaces/RoleEditOptions.md)
- [RolePermissionOptions](interfaces/RolePermissionOptions.md)
- [ServerEditOptions](interfaces/ServerEditOptions.md)
- [SweeperOptions](interfaces/SweeperOptions.md)
- [TextEmbedData](interfaces/TextEmbedData.md)
- [UserEditOptions](interfaces/UserEditOptions.md)
- [UserProfile](interfaces/UserProfile.md)

## Type Aliases

- [AttachmentMetadata](type-aliases/AttachmentMetadata.md)
- [BitFieldResolvable](type-aliases/BitFieldResolvable.md)
- [CDNTag](type-aliases/CDNTag.md)
- [ChannelResolvable](type-aliases/ChannelResolvable.md)
- [ChannelType](type-aliases/ChannelType.md)
- [EmojiParent](type-aliases/EmojiParent.md)
- [MemberResolvable](type-aliases/MemberResolvable.md)
- [MessageResolvable](type-aliases/MessageResolvable.md)
- [PermissionResolvable](type-aliases/PermissionResolvable.md)
- [PermissionString](type-aliases/PermissionString.md)
- [RawDMChannel](type-aliases/RawDMChannel.md)
- [RawGroupChannel](type-aliases/RawGroupChannel.md)
- [RawTextChannel](type-aliases/RawTextChannel.md)
- [RoleResolvable](type-aliases/RoleResolvable.md)
- [UserPresence](type-aliases/UserPresence.md)
- [UserRelationShip](type-aliases/UserRelationShip.md)
- [UserResolvable](type-aliases/UserResolvable.md)
- [UserStatus](type-aliases/UserStatus.md)

## Variables

- [PermissionFlags](variables/PermissionFlags.md)
